Naming updated to prevent overlaps.

--- a/frontend/infosafe_frontend/src/styling/ViewAccessRequest.css
+++ b/frontend/infosafe_frontend/src/styling/ViewAccessRequest.css
@@ -33,7 +33,7 @@
     left: 1vw;
     color: #ffffff;
 }
-.accessRequestBackIcon {
+.viewAccessRequestBackIcon {
     color: #ffffff;
     margin: 0 auto;
     height: 3vh;
